--- a/CoverBot/Info.plist
+++ b/CoverBot/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.app-sandbox</key>
-	<true/>
-	<key>com.apple.security.files.user-selected.red-write</key>
-	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OpenDyslexic3-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
